--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.cources">
+    package="com.example.cources" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,20 +15,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cources"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ui.ShowFireBaseVideo"
+            android:exported="false"
+          />
         <activity
             android:name=".ui.Student_Level"
-            android:exported="true">
-
+            android:exported="true" >
         </activity>
         <activity
             android:name=".student.ui.StudentHome"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".student.VideosActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.ShowVideo"
+            android:name=".ui.ShowYuoTubeVideo"
             android:exported="false"
             android:screenOrientation="landscape" />
         <activity
@@ -46,12 +49,10 @@
         <activity
             android:name=".ui.admin.Home"
             android:exported="true" />
-        <activity
-            android:name=".ui.admin.students"
-            android:exported="false" />
+
         <activity
             android:name=".student.ui.Login_Activity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
